Refactoring
make LANGUAGE_TAGS private and provide a getter